rethinkdb/service.yml
apiVersion: v1

kind: Service

metadata:

  name: rethinkdb

  namespace: rethinkdb-server

spec:
  
  selector:
    app: rethinkdb
  
  type: LoadBalancer
  
  ports:

    - name: rethinkdb-port
      protocol: TCP
      port: 28015
      # targetPort: 28015

    - name: rethinkdb-admin-port
      protocol: TCP
      port: 8080
      # targetPort: 8080
  #loadBalancerIP: 192.168.68.200
